Add image logo , favicon

--- a/index.html
+++ b/index.html
@@ -2,16 +2,44 @@
 <html lang="en">
 
 <head>
+  
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - iPortfolio Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Swastik Dharpure - .NET Developer</title>
+  <meta name="description" content="Portfolio of Swastik Dharpure, a passionate .NET Developer from Nagpur with experience in ASP.NET MVC, SQL Server, C#, and modern web development.">
+  <meta name="keywords" content=".NET Developer, ASP.NET, C#, SQL Server, MVC, Web Development, Swastik Dharpure, Nagpur Developer, Full Stack Developer">
+  <meta name="author" content="Swastik Dharpure">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+<!-- ---- -->
 
+<!-- Basic Meta Tags -->
+
+<meta name="robots" content="index, follow">
+<meta name="language" content="English">
+
+<!-- Open Graph (For Facebook, LinkedIn, etc.) -->
+<meta property="og:title" content="Swastik Dharpure - .NET Developer">
+<meta property="og:description" content="Portfolio of Swastik Dharpure, a skilled .NET Developer specializing in ASP.NET MVC, SQL Server, and web application development.">
+<meta property="og:image" content="https://swastikdharpure.github.io/Portfolio/assets/img/my-profile-img.jpg"> <!-- Replace with your image -->
+<meta property="og:url" content="https://swastikdharpure.github.io/Portfolio/">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card (For Twitter sharing) -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Swastik Dharpure - .NET Developer">
+<meta name="twitter:description" content="Explore the portfolio of Swastik Dharpure, showcasing .NET development projects and skills.">
+<meta name="twitter:image" content="https://swastikdharpure.github.io/Portfolio/assets/img/my-profile-img.jpg"> <!-- Replace with your image -->
+
+<!-- Favicon -->
+<link rel="icon" href="assets/img/favicon/favicon.ico" type="image/x-icon">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
+<link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicon/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicon/android-chrome-512x512.png">
+<link rel="manifest" href="assets/img/favicon/site.webmanifest">
+<!-- Favicon end---- -->
+  
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -27,13 +55,7 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: iPortfolio
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Updated: Jun 29 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  
 </head>
 
 <body class="index-page">
@@ -803,7 +825,7 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Call Us</h3>
-                  <p>+1 5589 55488 55</p>
+                  <p>+91 9689163020</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -811,7 +833,7 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Us</h3>
-                  <p>info@example.com</p>
+                  <p>swastikdharpure@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -867,14 +889,14 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">2025</strong> <span>All Rights Reserved</span></p>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a>
+        Designed by <a href="https://swastikdharpure.github.io/Portfolio/">Swastik</a> 
       </div>
     </div>
 
