--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 <meta name="twitter:description" content="Explore the portfolio of Swastik Dharpure, showcasing .NET development projects and skills.">
 <meta name="twitter:image" content="https://swastikdharpure.github.io/Portfolio/assets/img/my-profile-img.jpg"> <!-- Replace with your image -->
 
+
+<!-- --G-console-- -->
+ <meta name="google-site-verification" content="OeFfSMNIefoP4WvS9Za9cgVVrfRUZhzKCUyCynr-FO8" />
+ 
+ <!-- --G-console--end -->
+
 <!-- Favicon -->
 <link rel="icon" href="assets/img/favicon/favicon.ico" type="image/x-icon">
 <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
