--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
 
 <!-- --G-console-- -->
  <meta name="google-site-verification" content="OeFfSMNIefoP4WvS9Za9cgVVrfRUZhzKCUyCynr-FO8" />
- 
+
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TYF45CRV4N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TYF45CRV4N');
+</script>
  <!-- --G-console--end -->
 
 <!-- Favicon -->
