--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
 
 <!-- --G-console-- -->
- <meta name="google-site-verification" content="OeFfSMNIefoP4WvS9Za9cgVVrfRUZhzKCUyCynr-FO8" />
+ <!-- <meta name="google-site-verification" content="OeFfSMNIefoP4WvS9Za9cgVVrfRUZhzKCUyCynr-FO8" /> -->
+ <meta name="google-site-verification" content="bU2eSkwuXdp5xP34fSxvMIWo2xBIZOZbGbfoxzF7bO4" />
 
  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TYF45CRV4N"></script>
@@ -43,6 +44,14 @@
 
   gtag('config', 'G-TYF45CRV4N');
 </script>
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5WPSBVKB');</script>
+<!-- End Google Tag Manager -->
  <!-- --G-console--end -->
 
 <!-- Favicon -->
@@ -74,7 +83,10 @@
 </head>
 
 <body class="index-page">
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5WPSBVKB"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
