--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 
 <!-- --G-console-- -->
- <!-- <meta name="google-site-verification" content="OeFfSMNIefoP4WvS9Za9cgVVrfRUZhzKCUyCynr-FO8" /> -->
- <meta name="google-site-verification" content="bU2eSkwuXdp5xP34fSxvMIWo2xBIZOZbGbfoxzF7bO4" />
+  <meta name="google-site-verification" content="OeFfSMNIefoP4WvS9Za9cgVVrfRUZhzKCUyCynr-FO8" /> 
+ <!-- <meta name="google-site-verification" content="bU2eSkwuXdp5xP34fSxvMIWo2xBIZOZbGbfoxzF7bO4" /> -->
 
  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TYF45CRV4N"></script>
@@ -75,11 +75,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
 
-  
+  <link href="assets/css/main.css" rel="stylesheet">  
 </head>
 
 <body class="index-page">
@@ -154,14 +152,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     </section>
     
-    <section id="hero" class="hero section dark-background">
+    <!-- <section id="hero" class="hero section dark-background">
   <div class="container text-center">
     <img src="assets/img/profile.jpg" class="rounded-circle mb-3" alt="Swastik Dharpure">
     <h2>Swastik Dharpure</h2>
     <p>.NET Developer | SQL | MVC | C#</p>
     <a href="assets/docs/SwastikDharpure_Resume.pdf" class="btn btn-primary mt-3">Download Resume</a>
   </div>
-</section>
+</section> -->
     
     <!-- /Hero Section -->
 
