--- a/index.html
+++ b/index.html
@@ -139,7 +139,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </header>
 
   <main class="main">
-
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
@@ -203,8 +202,8 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
   <div class="col-lg-6">
     <ul>
       <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>25 April 1995</span></li>
-      <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.swastikdharpure.com</span></li>
-      <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91-9689163020</span></li>
+      <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://swastikdharpure.github.io/Portfolio/">www.swastikdharpure.com</a></li>
+      <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <a href="tel:+919689163020">+91-9689163020</a></li>
       <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Nagpur, Maharashtra, India</span></li>
     </ul>
   </div>
@@ -212,7 +211,7 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
     <ul>
       <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
       <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Engineering (2022)</span></li>
-      <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>swastikdharpure@gmail.com</span></li>
+      <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <a href="mailto:swastikdharpure@gmail.com">swastikdharpure@gmail.com</a></li>
       <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
     </ul>
   </div>
@@ -385,7 +384,7 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
           <p><em>ASP.NET Core MVC | .NET Developer | Web Developer | Full-Stack Developer</em></p>
           <ul>
             <li>Nagpur, Maharashtra, India</li>
-            <li>+91-9689163020</li>
+            <li> <a href="tel:+919689163020">+91-9689163020</a></li>
             <li><a href="mailto:swastikdharpure@gmail.com">swastikdharpure@gmail.com</a></li>
             <li><a href="https://linkedin.com/in/swastikdharpure" target="_blank">LinkedIn Profile</a></li>
           </ul>
@@ -858,7 +857,7 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Call Us</h3>
-                  <p>+91 9689163020</p>
+                  <p><a href="+91-9689163020">+91 9689163020</a></p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -866,7 +865,7 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Us</h3>
-                  <p>swastikdharpure@gmail.com</p>
+                  <p><a href="mailto:swastikdharpure@gmail.com">swastikdharpure@gmail.com</a></p>
                 </div>
               </div><!-- End Info Item -->
 
