Add index in gtranlator disable

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Portfolio of Swastik Dharpure, a passionate .NET Developer from Nagpur with experience in ASP.NET MVC, SQL Server, C#, and modern web development.">
   <meta name="keywords" content=".NET Developer, ASP.NET, C#, SQL Server, MVC, Web Development, Swastik Dharpure, Nagpur Developer, Full Stack Developer">
   <meta name="author" content="Swastik Dharpure">
+  <meta name="google" content="notranslate">
 
 <!-- ---- -->
 
@@ -235,17 +236,17 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
 
         <div class="row gy-4">
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 col-sm-6 col-6">
             <div class="stats-item">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="5" class="purecounter"></span><span>
+              <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="5"   class="purecounter"></span>
               <p><strong>Happy Clients</strong>
                  <!-- <span>consequuntur quae</span> -->
                 </p>
             </div>
           </div><!-- End Stats Item -->
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 col-sm-6 col-6">
             <div class="stats-item">
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="5" class="purecounter"></span>
@@ -255,7 +256,7 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
             </div>
           </div><!-- End Stats Item -->
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 col-sm-6 col-6">
             <div class="stats-item">
               <i class="bi bi-headset"></i>
               <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="5" class="purecounter"></span>
@@ -265,7 +266,7 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
             </div>
           </div><!-- End Stats Item -->
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 col-sm-6 col-6">
             <div class="stats-item">
               <i class="bi bi-people"></i>
               <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="5" class="purecounter"></span>
@@ -966,5 +967,12 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
   <script src="assets/js/main.js"></script>
 
 </body>
+
+<style >
+  .purecounter::after {
+  content: "+";
+}
+
+</style>
 
 </html>
