--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <main class="main">
     <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
+    <section id="hero" class="hero section dark-background" style="min-height: auto;">
 
       <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
 
