--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <a href="https://github.com/SwastikDharpure" class="twitter" target="_blank"><i class="bi bi-github"></i></a>
       <a href="#" class="facebook"><i class="bi bi-microsoft-teams" target="_blank"></i></a>
       <a href="mailto:swastikdharpure@gmail.com" class="instagram" target="_blank"><i class="bi bi-envelope-at"></i></a>
-      <a href="#" class="google-plus"><i class="bi bi-skype" target="_blank"></i></a>
+      <a href="https://wa.me/919689163020" class="google-plus"><i class="bi bi-whatsapp" target="_blank"></i></a>
+       
+      
       <a href="https://linkedin.com/in/swastikdharpure" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
     </div>
 
