Add index in border add

--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
         <div class="row gy-4">
 
           <div class="col-lg-3 col-md-6 col-sm-6 col-6">
-            <div class="stats-item">
+            <!-- <div class="stats-item"> -->
+              <div class="stats-item border rounded p-3 mb-3 text-center bg-light"></div>
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="5"   class="purecounter"></span>
               <p><strong>Happy Clients</strong>
